Bug 1551990 - Firefox hangs on wake up from OS X Power Nap r=spohl a=jcristau

Disable App Nap in Firefox to avoid macOS App Nap'ing the parent process while child processes continue to run normally.

Differential Revision: https://phabricator.services.mozilla.com/D33130