toolkit/xre/nsAppRunner.cpp
@@ -3012,6 +3012,10 @@ int XREMain::XRE_mainInit(bool* aExitFlag) {
     return 1;
   }
 
+#ifdef XP_MACOSX
+  DisableAppNap();
+#endif
+
   if (PR_GetEnv("MOZ_CHAOSMODE")) {
     ChaosFeature feature = ChaosFeature::Any;
     long featureInt = strtol(PR_GetEnv("MOZ_CHAOSMODE"), nullptr, 16);
